Login form state structure update

--- a/src/containers/Login/Login.css
+++ b/src/containers/Login/Login.css
@@ -47,3 +47,9 @@
 .textField input {
   color: white;
 }
+
+.HorizontalDiv {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
