--- a/src/components/Navigation/NavBar/NavBar.css
+++ b/src/components/Navigation/NavBar/NavBar.css
@@ -2,12 +2,12 @@
   width: 100%;
   height: 45px;
   display: flex;
-  justify-content: space-between;
   align-items: center;
   position: absolute;
   top: 0;
   left: 0;
   padding-top: 5px;
+  font-size: 1vw;
 }
 
 .NavBar > * {
@@ -15,6 +15,39 @@
 }
 
 .NavBar img {
-  height: 60px;
+  height: 100%;
   width: 168px;
+}
+
+.inactive {
+  color: #e5e5e5;
+  margin: 0;
+  padding-right: 15px;
+  cursor: pointer;
+  font-weight: lighter;
+  transition: color .4s;
+  text-decoration: none;
+}
+
+.NavBar a:hover {
+  color: grey;
+}
+
+.active {
+  font-weight: normal;
+  color: white;
+}
+
+.LinkContainer {
+  margin-right: auto;
+}
+
+.OptionsContainer {
+  color: white;
+}
+
+.OptionsContainer > * {
+  color: white;
+  cursor: pointer;
+  margin-right: 25px;
 }
