Dropdown MVP functional

--- a/src/components/UI/ProfileCard/ProfileCard.css
+++ b/src/components/UI/ProfileCard/ProfileCard.css
@@ -1,8 +1,26 @@
 .ProfileCard {
     width: 18%;
-    height: 20%;
     margin: 15px;
     cursor: pointer;
+}
+
+.ProfileCardDropdown {
+    width: 90%;
+    display: flex;
+    align-items: center;
+}
+
+.ProfileCardDropdown > * {
+    margin-right: 10px;
+}
+
+.ProfileCardDropdown:hover span {
+    text-decoration: underline;
+}
+
+.ProfileCardDropdown img {
+    width: 20%;
+    height: 100%;
 }
 
 .ProfileCard span {
