--- a/src/components/Navigation/Dropdown/Dropdown.css
+++ b/src/components/Navigation/Dropdown/Dropdown.css
@@ -1,3 +1,26 @@
 .Dropdown {
+    position: relative;
     display: inline-block;
+}
+
+.FloatingBox {
+    position: absolute;
+    right: 0;
+    top: 42px;
+    width: 181px;
+    height: 370px;
+    margin-left: 0;
+    padding: 0;
+    border: solid 1px rgba(255,255,255,.15);
+
+    display: flex;
+    flex-direction: column;
+}
+
+.FloatingBox > * {
+    padding: 10px;
+}
+
+.FloatingBox span:hover {
+    text-decoration: underline;
 }
