--- a/src/containers/Browse/BrowseContent/BrowseContent.css
+++ b/src/containers/Browse/BrowseContent/BrowseContent.css
@@ -5,22 +5,46 @@
 
 .TextsAndButtons {
     display: flex;
-    align-items: center;
+    align-items: flex-end;
     justify-content: space-between;
     color: white;
     padding-top: 50px;
     margin-left: 20px;
-    height: 100%
+    padding: 10px;
+    height: 100%;
 }
 
 .verticalItem {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    align-items: flex-start;
+    justify-content: flex-end;
+    margin-bottom: 80px;
     height: 200px;
+    max-width: 40%;
 }
 
 .verticalItem h3 {
     margin: 0;
+    font-size: 1.6vw;
+}
+
+.verticalItem span {
+    font-size: 1.4vw;
+}
+
+.verticalItem > * {
+    padding: 10px;
+}
+
+.horizontalButtonsHolder {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: 15%;
+}
+
+.horizontalButtonsHolder > * {
+    margin-right: 10px;
+    font-weight: bold;
 }
