--- a/src/components/Video/VideoCarousel/VideoCarousel.css
+++ b/src/components/Video/VideoCarousel/VideoCarousel.css
@@ -5,7 +5,11 @@
     padding: 10px;
     font-size: 1.4vw;
     height: 500px;
-    overflow-x: hidden;
+    overflow-x: auto;
+}
+
+.VideoCarousel::-webkit-scrollbar {
+  display: none;
 }
 
 .items {
