Shifted codebase to @redux/toolkit|normalized store structure using entity adapters|started work on the video detail modal

--- a/src/components/Video/VideoCard/VideoCard.css
+++ b/src/components/Video/VideoCard/VideoCard.css
@@ -25,10 +25,10 @@
     margin: 0;
 }
 
-.VideoInfo span {
-    font-size: 0.5em;
+.horizontalStyle {
+    display: flex;
 }
 
-.genres {
-    display: flex;
+.horizontalStyle span {
+    font-size: 0.5em;
 }
