--- a/src/components/Modals/VideoModal/VideoModal.css
+++ b/src/components/Modals/VideoModal/VideoModal.css
@@ -3,20 +3,20 @@
 }
 
 .shadowedSection > * {
-    margin-bottom: 2rem;
+    margin-bottom: 1rem;
 }
 
 .shadowedSection {
     display: flex;
     flex-direction: column;
     height: 100%;
-    background: linear-gradient(90deg, rgba(0,0,0,0.966) 35%, transparent);
+    background: linear-gradient(90deg, rgba(0,0,0,0.966) 55%, transparent);
     color: white;
     padding: 18px 0 12px 4%;
 }
 
 .shadowedSection div {
-    width: 40%;
+    width: 65%;
     color: #999;
 } 
 
@@ -28,3 +28,17 @@
     margin-right: 10px;
 }
 
+@media(min-width: 600px) {
+    .shadowedSection {
+        background: linear-gradient(90deg, rgba(0,0,0,0.966) 35%, transparent);
+    }
+
+    .shadowedSection div {
+        width: 40%;
+    } 
+
+    .shadowedSection > * {
+        margin-bottom: 2rem;
+    }
+    
+}
