--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
 body {
   margin: 0;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-
+  -webkit-tap-highlight-color: transparent;
 }
