--- a/src/components/Navigation/NavBar/NavBar.css
+++ b/src/components/Navigation/NavBar/NavBar.css
@@ -62,6 +62,15 @@
     margin: 10px;
   }
 
+  .OptionsContainer {
+    display: flex;
+    align-items: center;
+    color: white;
+    margin: 0;
+    height: 80%;
+  }
+  
+
   .LinkContainer {
     margin-right: auto;
   }
