--- a/src/containers/Search/Search.css
+++ b/src/containers/Search/Search.css
@@ -12,7 +12,7 @@
 }
 
 .Holder svg {
-    padding: 15px 5px
+    padding: 15px 5px;
 }
 
 .Holder input {
@@ -26,11 +26,6 @@
 .scale-up-hor-right {
 	-webkit-animation: scale-up-hor-right 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
 	animation: scale-up-hor-right 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
-}
-
-.scale-down-hor-right {
-	-webkit-animation: scale-down-hor-right 0.4s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-	animation: scale-down-hor-right 0.4s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
 }
 
 @-webkit-keyframes scale-up-hor-right {
@@ -61,33 +56,3 @@
             transform-origin: 100% 100%;
 }
 }
-
-@-webkit-keyframes scale-down-hor-right {
-0% {
-    -webkit-transform: scaleX(1);
-            transform: scaleX(1);
-    -webkit-transform-origin: 100% 100%;
-            transform-origin: 100% 100%;
-}
-100% {
-    -webkit-transform: scaleX(0.3);
-            transform: scaleX(0.3);
-    -webkit-transform-origin: 100% 100%;
-            transform-origin: 100% 100%;
-}
-}
-@keyframes scale-down-hor-right {
-0% {
-    -webkit-transform: scaleX(1);
-            transform: scaleX(1);
-    -webkit-transform-origin: 100% 100%;
-            transform-origin: 100% 100%;
-}
-100% {
-    -webkit-transform: scaleX(0.3);
-            transform: scaleX(0.3);
-    -webkit-transform-origin: 100% 100%;
-            transform-origin: 100% 100%;
-}
-}
-
