--- a/src/containers/Browse/SearchContent/SearchContent.css
+++ b/src/containers/Browse/SearchContent/SearchContent.css
@@ -7,6 +7,7 @@
 .SearchGrid {
     display: grid;
     grid-template-columns: repeat(3, 31.5%);
+    grid-auto-rows: 80px;
     grid-gap: 10px;
     height: 100%;
 }
@@ -22,5 +23,6 @@
 
     .SearchGrid {
         grid-template-columns: repeat(6, 16%);
+        grid-auto-rows: 140px;
     }
 }
