--- a/src/containers/Browse/SearchContent/SearchContent.css
+++ b/src/containers/Browse/SearchContent/SearchContent.css
@@ -1,7 +1,6 @@
 .SearchContent {
     padding: 95px 10px;
     color: white;
-    height: 100vh;
 }
 
 .SearchGrid {
@@ -10,6 +9,15 @@
     grid-auto-rows: 80px;
     grid-gap: 10px;
     height: 100%;
+}
+
+.SearchGrid .GridItem:focus,
+.SearchGrid .GridItem:hover {
+  transform: scale(1.3);
+}
+
+.GridItem {
+    transition: transform 500ms;
 }
 
 .GridItem > * {
