Extracted navbar dropdown logic to a custom hook for reusability|have to use that to make the search component/navbar responsive

--- a/src/components/Navigation/NavBar/NavBar.css
+++ b/src/components/Navigation/NavBar/NavBar.css
@@ -40,6 +40,13 @@
   margin-right: auto;
 }
 
+.DropdownNav {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
 .OptionsContainer {
   color: white;
 }
