--- a/src/containers/Search/Search.css
+++ b/src/containers/Search/Search.css
@@ -9,6 +9,8 @@
     height: 100%;
     width: 100%;
     background-color: black;
+    height: 30px;
+    width: 160px
 }
 
 .Holder svg {
@@ -55,4 +57,11 @@
     -webkit-transform-origin: 100% 100%;
             transform-origin: 100% 100%;
 }
+}
+
+@media(min-width: 600px) {
+    .Holder {
+        height: 30px;
+        width: 250px
+    }
 }
