--- a/src/components/UI/FAQComponent/FAQComponent.css
+++ b/src/components/UI/FAQComponent/FAQComponent.css
@@ -4,6 +4,7 @@
   align-items: center;
   padding: 0.8em 2.2em 0.8em 1.2em;
   width: 100%;
+  margin-top: 10px;
   background: #303030;
   font-size: 20px;
   cursor: pointer;
