--- a/src/components/Modals/VideoModal/VideoModal.css
+++ b/src/components/Modals/VideoModal/VideoModal.css
@@ -1,3 +1,17 @@
+.ModalStyles {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    height: 45%;
+    width: 100%;
+    background: rgba(0,0,0,0.966);
+    border: none;
+    outline: none;
+    font-size: 0.8rem;
+    padding: 0;
+}
+
 .VideoDetailSection {
     height: 100%;
 }
@@ -28,7 +42,16 @@
     margin-right: 10px;
 }
 
+.Overview {
+    overflow: scroll;
+}
+
 @media(min-width: 600px) {
+    .ModalStyles {
+        height: 60%;
+        font-size: 1rem;
+    }
+
     .shadowedSection {
         background: linear-gradient(90deg, rgba(0,0,0,0.966) 35%, transparent);
     }
