--- a/src/components/UI/Button/Button.css
+++ b/src/components/UI/Button/Button.css
@@ -1,7 +1,14 @@
 .Button {
+    display: inline-block;
     border-radius: 3px;
     border: 0;
     outline: 0;
     cursor: pointer;
     font-size: 1rem; 
+}
+
+@media(max-height: 600px) {
+    .Button {
+        font-size: 0.9rem;
+    }
 }
