--- a/src/styles.css
+++ b/src/styles.css
@@ -4,6 +4,10 @@ body {
   -webkit-tap-highlight-color: transparent;
 }
 
+body button {
+    cursor: pointer;
+}
+
 ::-webkit-scrollbar {
   display: none;
 }
