Responsiveness bettered in 1920x1080 viewports

--- a/src/components/Video/TopTrailerComponent/TopTrailerComponent.css
+++ b/src/components/Video/TopTrailerComponent/TopTrailerComponent.css
@@ -1,11 +1,14 @@
 .VideoComponent {
     height: 580px;
     width: 100%;
-
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-  
     position: relative;
 }
 
+@media(min-width: 1650px) {
+    .VideoComponent {
+        height: 800px;
+    }
+}
