--- a/src/containers/LandingSection/LandingSection.css
+++ b/src/containers/LandingSection/LandingSection.css
@@ -133,3 +133,9 @@
     justify-content: space-between;
   }
 }
+
+@media(min-width: 1650px) {
+    .tv-section img {
+        width: 35%;
+    }      
+}
