--- a/src/components/Navigation/Dropdown/Dropdown.css
+++ b/src/components/Navigation/Dropdown/Dropdown.css
@@ -10,14 +10,13 @@
     margin-left: 0;
     padding: 0;
     border: solid 1px rgba(255,255,255,.15);
-
     display: flex;
     flex-direction: column;
     background: #141414;
 }
 
 .FloatingBox > * {
-    padding: 10px;
+    padding: 1vh;
 }
 
 .FloatingBox span:hover {
